--- a/todo
+++ b/todo
@@ -6,5 +6,6 @@
 - [ ] Enable mxDebug (to get line numbers on exceptions, if we can)
 - [ ] Enable optimization (and debug issues)
 - [ ] Fix stack checking (fxCheckCStack) in parsing and GC among other places.
+- [ ] ESModules.
 
 
