--- a/todo
+++ b/todo
@@ -7,5 +7,6 @@
 - [ ] Enable optimization (and debug issues)
 - [ ] Fix stack checking (fxCheckCStack) in parsing and GC among other places.
 - [ ] ESModules.
+- [ ] Re-enable terser
 
 
