--- a/todo
+++ b/todo
@@ -5,8 +5,10 @@
 - [x] Rename jsnap to xs-sandbox
 - [x] Clean up unused functions like process_message
 - [x] Metering support
+- [x] Synchronous response from sendMessage
+- [x] Exception from sendMessage
+- [x] Undefined from sendMessage
 - [ ] Console.log
-- [ ] Synchronous response from sendMessage
 - [ ] Location information on exceptions
 - [ ] Consider reentrancy
 - [ ] Consider reentrancy and snapshotting (e.g. snapshotting while the stack is active or snapshotting in the job queue).
