--- a/todo
+++ b/todo
@@ -8,10 +8,11 @@
 - [x] Synchronous response from sendMessage
 - [x] Exception from sendMessage
 - [x] Undefined from sendMessage
+- [x] Location information on exceptions
 - [ ] Console.log
-- [ ] Location information on exceptions
 - [ ] Consider reentrancy
 - [ ] Consider reentrancy and snapshotting (e.g. snapshotting while the stack is active or snapshotting in the job queue).
+- [ ] Filenames in stack traces
 - [ ] Instrumentation and debugging
 - [ ] Test and document behavior of non-deterministic behavior
 - [ ] Check failure cases like metering expiry or other exception.
